tests/NormalTests/paczka1/small_fuzzy/60448839.err
Error in line 2: m3aa A816 44,5
Error in line 10: pt1h64bwM S117 -5,0
Error in line 7: ktmZLJp A9 59,4
Error in line 12: CGh3q2uXW S117 82,1
